--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/server.ts",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
     "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
-    "testtest": "cross-env ENV=testtest db-migrate --env testtest up && jasmine-ts && db-migrate db:drop testtest",
+    "testtest": "cross-env ENV=testtest db-migrate --env testtest up && jasmine-ts",
     "tsc": "tsc"
   },
   "author": "Udacity",
@@ -24,7 +24,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@types/jasmine": "^3.10.1",
+    "@types/jasmine": "^3.10.2",
     "cross-env": "^7.0.3",
     "jasmine": "^3.10.0",
     "jasmine-spec-reporter": "^6.0.0",
