--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "start": "node src/server.ts",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
     "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
-    "testtest": "cross-env ENV=testtest db-migrate --env testtest up && jasmine-ts",
+    "testtest": "cross-env ENV=testtest db-migrate --env testtest up && jasmine-ts && cross-env ENV=testtest db-migrate --env testtest down && cross-env ENV=testtest db-migrate --env testtest down && db-migrate db:drop testtest",
+    "upup": "cross-env ENV=testtest db-migrate --env testtest up",
+    "downdown_migrate": "cross-env ENV=testtest db-migrate --env testtest down",
+    "downdown": "db-migrate db:drop testtest",
     "tsc": "tsc"
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.13",
     "@types/pg": "^7.14.7",
     "body-parser": "^1.19.0",
     "db-migrate": "^1.0.0-beta.16",
