--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/pg": "^7.14.7",
     "@types/supertest": "^2.0.11",
